# demo-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt  README.md
core/include/core/: core.hpp
core/src/: core.cpp
math/: CMakeLists.txt  README.md
math/include/math/: math.hpp
math/src/: math.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
utils/: CMakeLists.txt
utils/include/utils/: utils.hpp
utils/src/: utils.cpp
